add new assignments

--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -391,7 +391,8 @@
     "### Inline Question 1:\n",
     "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
     "\n",
-    "**Your Answer:** *fill this in.*"
+    "**Your Answer:** *fill this in.*\n",
+    "The SVM loss function is not differentiable since it is not defined for all values of W. This is due to the fact that we are taking max(0, w_j*x - w_yi*x + delta. The point when the second argument becomes 0 is non-differentiable and would be computed differently when using the numerical approach. It would try to calculate the next functional value with a small increment of the variable, but in practice, there is a vertical \"switch\" to zero. This means that all the values between the last positive value and zero are not defined, which renders the function non differentiable. This shouldn't be too much of an issue if we keep the gradient small enough."
    ]
   },
   {
